causing a 500 status code via the NotificationSink works. WIP (TestTests are not adapted, yet)